k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: image-generator
  labels:
    app.kubernetes.io/part-of: image-generator
