k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-app
  namespace: aks-demo
spec:
  replicas: 2

  selector:
    matchLabels:
      app: fastapi-app

  template:
    metadata:
      labels:
        app: fastapi-app

    spec:
      containers:
        - name: fastapi

          image: aksacrdev02.azurecr.io/aks-mysql-sample:latest

          imagePullPolicy: Always

          ports:
            - containerPort: 8000

          readinessProbe:
            httpGet:
              path: /ready
              port: 8000

            initialDelaySeconds: 15
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 8000

            initialDelaySeconds: 30
            periodSeconds: 15

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"
